Set up new Controllers for every needed new feature. Also modified panel controller to open them, Created scenes for each one and have working toolbar navigation with correct and working animations.

--- a/CGFlowController.xcodeproj/xcshareddata/xcschemes/CGFlowController.xcscheme
+++ b/CGFlowController.xcodeproj/xcshareddata/xcschemes/CGFlowController.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2EC7608E18E6021D00FCEBBC"
-               BuildableName = "libCGFlowController.a"
-               BlueprintName = "CGFlowController"
+               BuildableName = "libCGFlowControllerOld.a"
+               BlueprintName = "CGFlowControllerOld"
                ReferencedContainer = "container:CGFlowController.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
