Reorganized entire project.

--- a/CGFlowController.xcodeproj/xcshareddata/xcschemes/CGFlowController.xcscheme
+++ b/CGFlowController.xcodeproj/xcshareddata/xcschemes/CGFlowController.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2EC7608E18E6021D00FCEBBC"
                BuildableName = "libCGFlowControllerOld.a"
-               BlueprintName = "CGFlowControllerOld"
+               BlueprintName = "CGFlowController"
                ReferencedContainer = "container:CGFlowController.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
