Working simulator and mail bugs.

--- a/CGFlowController.xcodeproj/xcshareddata/xcschemes/CGFlowController.xcscheme
+++ b/CGFlowController.xcodeproj/xcshareddata/xcschemes/CGFlowController.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2EC7608E18E6021D00FCEBBC"
-               BuildableName = "libCGFlowControllerOld.a"
+               BuildableName = "libCGFlowController.a"
                BlueprintName = "CGFlowController"
                ReferencedContainer = "container:CGFlowController.xcodeproj">
             </BuildableReference>
